# JARVIS_M

./: Cargo.toml
app/: Cargo.toml
app/src/: app.rs  document_search.rs  error.rs  main.rs  tray.rs  tts.rs
app/src/audio/: kira.rs
app/src/db/: structs.rs
gui/: package.json
gui/src-tauri/src/: main.rs
gui/src-tauri/src/tauri_commands/: listener.rs
gui/src/pages/: settings.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ai_integration.rs  app.rs  audio.rs  audio_monitor.rs  commands.rs  config.rs  db.rs  document_search.rs  lib.rs  log.rs  main.rs  recorder.rs  tauri_commands.rs  tray.rs
src-tauri/src/audio/: audio_monitor.rs  kira.rs  mod.rs  pvrecorder.rs  recorder.rs  rodio.rs
src-tauri/src/commands/: commands.rs  mod.rs
src-tauri/src/config/: config.rs  mod.rs  structs.rs
src-tauri/src/db/: db.rs  mod.rs
src-tauri/src/listener/: mod.rs  porcupine.rs  rustpotter.rs  vosk.rs
src-tauri/src/stt/: mod.rs  vosk.rs
src-tauri/src/tauri_commands/: mod.rs
