[workspace]
members = ["src-tauri"]
resolver = "2"
default-members = ["src-tauri"]

# Определяем workspace как пакет для корректной работы IDE
[package]
name = "jarvis-workspace"
version = "0.3.0"
edition = "2021"

# Определяем библиотеку
[lib]
name = "jarvis"
path = "src-tauri/src/lib.rs"

# Определяем исполняемый файл
[[bin]]
name = "jarvis"
path = "src-tauri/src/main.rs"

[workspace.dependencies]
# Общие зависимости для всего workspace
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
tauri = { version = "1.8.3", features = ["api-all"] }

# Общие утилиты
once_cell = "1.18.0"
thiserror = "1.0"
anyhow = "1.0"

# Аудио
rodio = "0.17.1"
hound = "3.5.0"

# Wake-word detection
pv_porcupine = "2.2.1"
vosk = "0.2.0"
